--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
+    "@stripe/stripe-js": "^3.1.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "crypto-js": "^4.2.0",
@@ -31,6 +32,7 @@
     "sass": "^1.71.1",
     "scss": "^0.2.4",
     "shortid": "^2.2.16",
+    "stripe": "^14.22.0",
     "swiper": "^11.0.7",
     "tailwindcss": "^3.4.1",
     "yup": "^1.4.0"
