changes by yash
changes by yash

--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@stripe/stripe-js": "^3.1.0",
     "axios": "^1.6.7",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
+    "cookies-next": "^4.1.1",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
+    "express-session": "^1.18.0",
     "formik": "^2.4.5",
     "js-cookie": "^3.0.5",
     "lodash.debounce": "^4.0.8",
@@ -40,6 +43,7 @@
   "devDependencies": {
     "@types/bootstrap": "^5.2.10",
     "@types/crypto-js": "^4.2.2",
+    "@types/express-session": "^1.18.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
